syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "GrpcProto";
option objc_class_prefix = "HLW";


// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc sendMessage (GrpcRequest) returns (GrpcReply) {}
}

// The request message containing the user's name.
message GrpcRequest {
  string params = 1;
}

// The response message containing the greetings
message GrpcReply {
  string message = 1;
}
